Knit #7 without bootstrap. cj_edge calculation done without makeNominalData

--- a/res_MuSu/7_[NA, c, HMFA]/MSC_allsubs/MuSu_(NA, c, HMFA).Rmd
+++ b/res_MuSu/7_[NA, c, HMFA]/MSC_allsubs/MuSu_(NA, c, HMFA).Rmd
@@ -228,9 +228,16 @@ We first compute the contribution and find the important edges and sessions:
 cI <- svd.res$ExPosition.Data$ci
 cJ <- svd.res$ExPosition.Data$cj
 #--- get the sum of contribution for each edge
-c_edge <- gtlabel$subjects_edge_label %>% as.matrix %>% makeNominalData %>% t %>% "%*%"(cJ)
-rownames(c_edge) <- sub(".","",rownames(c_edge))
+# c_edge <- gtlabel$subjects_edge_label %>% as.matrix %>% makeNominalData %>% t %>% "%*%"(cJ)
+# rownames(c_edge) <- sub(".","",rownames(c_edge))
+# rownames(cI) <- c(1:10)
+
+# new way
+c_edge <- aggregate(cJ,list(edge = gtlabel$subjects_edge_label),sum)
+rownames(c_edge) <- c_edge$edge
+c_edge <- c_edge[,-1]
 rownames(cI) <- c(1:10)
+
 ## Find important sessions
 #--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
 sesCtr12 <- (cI[,1]+cI[,2])/(svd.res$ExPosition.Data$eigs[1] + svd.res$ExPosition.Data$eigs[2])
