--- a/des_MSC/DisplayMSC_SpringEmbedded.Rmd
+++ b/des_MSC/DisplayMSC_SpringEmbedded.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MSC All Subjects RSFC Spring-embedded Graphs"
+title: "MSC All Subjects RSFC Spring-embedded Graphs - 4% Edge Density"
 output: github_document
 ---
 
@@ -80,7 +80,7 @@ for(i in 1:length(subj.name)){
 zmat.path <- "../data/zmat"
 springlist <- list()
 springlist_i <- 1
-for(subj.count in 1:1){ # length(parcel.list)){
+for(subj.count in 1:length(parcel.list)){
   load(sprintf("%s/sub-MSC%02d_zcube_rcube.RData",zmat.path,subj.count))
   springlist[[subj.count]] <- list()
   for(session.count in 1:dim(cubes$rcube)[3]){
@@ -96,8 +96,11 @@ for(subj.count in 1:1){ # length(parcel.list)){
     V(net)$community <- parcel.list[[subj.name[subj.count]]]$vox.des$Comm
     net <- simplify(net, remove.multiple = F, remove.loops = T) 
     
-    springlist[[subj.count]][[session.count]]  <- as.grob(function() plot(net, layout=layout_with_fr, vertex.label=NA, vertex.size=5, vertex.color=parcel.list[[subj.name[subj.count]]]$vox.des$Comm.Col, alpha=.6))
-     
+    springlist[[subj.count]][[session.count]]  <- as.grob(function() plot(net, layout=layout_with_fr, vertex.label=NA, vertex.size=7, vertex.color=parcel.list[[subj.name[subj.count]]]$vox.des$Comm.Col, alpha=.6))
+   
+    # Remove NA that turns into text labels for nodes
+    springlist[[subj.count]][[session.count]]$children$`graphics-plot-1-text-1`$label <- ""
+    springlist[[subj.count]][[session.count]]$children$`graphics-plot-1-text-2`$label <- ""
   }
 }
 ```
@@ -107,4 +110,5 @@ for(i in 1:length(springlist)){
   print(sprintf("%s", subj.name[i]))
   do.call(grid.arrange, c(springlist[[i]], ncol=5))
 }
+
 ```
