--- a/des_MSC/DisplayMSC_SpringEmbedded.Rmd
+++ b/des_MSC/DisplayMSC_SpringEmbedded.Rmd
@@ -89,7 +89,7 @@ for(subj.count in 1:length(parcel.list)){
     z_pos[z_pos<0] <- 0
     ## Threshold matrix to 4%
     z4 <- z_pos
-    z4[z < quantile(z, 0.96)] <- 0
+    z4[z_pos < quantile(z_pos, 0.96)] <- 0
     net <- graph.adjacency(adjmatrix = z4, mode = "undirected", diag = F, weighted = T)
     
     V(net)$id <- parcel.list[[subj.name[subj.count]]]$vox.des$NodeID
